[package]
name = "postgresql_write"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
structopt = "0.3.23"
postgres = {version = "0.19.2" , features = ["with-serde_json-1", "with-chrono-0_4", "with-time-0_3"] }
tokio = { version = "1.16.1", features = ["full"] }
tokio-postgres = "0.7.5"
serde = "1.0.130"
serde_json = "1.0.68"
serde_derive = "1.0.130"
chrono = "0.4.19"
